<resources>
    <string name="app_name">Rentasaur2</string>
    <string name="email_hint">Email</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new account?</string>
    <string name="action_search_text">Search</string>
    <string name="account_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="setup_name_hint">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Property Name</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="bottom_property_text">Property</string>
    <string name="bottom_tenants_text">Tenants</string>
    <string name="bottom_expenses_text">Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_addr_hint">Add Address Line 1</string>
    <string name="new_post_info_hint">Extra Information</string>
    <string name="action_delete_text">Delete</string>
    <string name="action_add_tenant">add_tenant</string>


</resources>
